test/tests/stages/18_structures/invalid_types/tag_resolution/incomplete_shadows_complete_cast.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[56]:
  void
  *
  identifier(malloc)
  (
  unsigned
  long
  identifier(size)
  )
  ;
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  void
  *
  identifier(ptr)
  =
  identifier(malloc)
  (
  sizeof
  (
  struct
  identifier(s)
  )
  )
  ;
  struct
  identifier(s)
  ;
  (
  (
  struct
  identifier(s)
  *
  )
  identifier(ptr)
  )
  ->
  identifier(a)
  =
  const int(10)
  ;
  return
  const int(0)
  ;
  }
